Changed the footer to a div with id #footer to see if that fixes sticky footer mix-in not working on iOS

--- a/rsvpApp/sass/screen.scss
+++ b/rsvpApp/sass/screen.scss
@@ -90,7 +90,7 @@ header {
 		padding-top:95px;
 	}
 }
-footer {
+#footer {
 	@include span(full no-gutters);
 	height:80px;
 	border-top: 1px solid -ts-color($darkblue, 0.2);
@@ -240,7 +240,7 @@ nav > ul li a{
  * Footer styles 
  ***********************************
 */
-footer  > p{
+#footer  > p{
 	@include span(full no-gutters);
 	font-size:0.7rem;
 	text-align:center;
